# awsbot-cli

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
awsbot_cli/: main.py
awsbot_cli/commands/: auth.py  billing.py  cdk.py  ecr.py  github.py  infra.py  s3.py  secrets.py  vpn.py  workflow.py
awsbot_cli/lambda_functions/: cleanup_amis.py
awsbot_cli/reports/: billing.py  s3.py
awsbot_cli/templates/: vpn_config.ovpn.j2
awsbot_cli/utils/: common.py  compat.py  config.py  google_handler.py  logger.py  pki.py  reporter.py  s3.py  ssm_handler.py
awsbot_cli/workflow/: ai_utils.py  constants.py  github_utils.py  gitlab_utils.py  jira_utils.py  pipeline.py
tests/unit/: test_main.py
tests/unit/commands/: test_auth.py  test_billing.py  test_cdk.py  test_ecr.py  test_github.py  test_infra.py  test_s3.py  test_secrets.py  test_vpn.py  test_workflow.py
tests/unit/lambda_functions/: test_clean_amis.py
tests/unit/reports/: test_billing_reports.py  test_s3_reports.py
tests/unit/utils/: test_common.py  test_compat.py  test_config.py  test_pki.py  test_s3_utils.py  test_ssm_handler.py
tests/unit/workflow/: test_ai_utils.py  test_gitlab_utils.py  test_jira_utils.py  test_pipeline.py
